# javatoolkit

./: .usermap  AUTHORS  ChangeLog  ChangeLog.2004  INSTALL  MANIFEST  MANIFEST.in  Makefile  NEWS  README  README.md  make-release  makedefs.mak  pyproject.toml  setup.py
.github/workflows/: test.yml
src/bsfix/: Makefile  build-xml-rewrite  build-xml-source-target.xslt  class-version-verify.py  rewrite2-speed-test.sh  xml-rewrite-2.py  xml-rewrite-2.py_tests.sh  xml-rewrite-3.py  xml-rewrite2.py
src/bsfix/tests/: build.xml
src/buildparser/: Makefile  buildparser
src/buildtool/: buildtool
src/findclass/: AUTHORS  Makefile
src/jarjarclean/: Makefile  jarjarclean
src/javatoolkit/: Makefile  __init__.py  classpath.py  cvv.py  output.py
src/javatoolkit/java/: properties.py
src/javatoolkit/maven/: MavenPom.py
src/javatoolkit/parser/: __init__.py  buildproperties.py  helpers.py  manifest.py  parser.py  tree.py
src/javatoolkit/scripts/: buildparser.py  class_version_verify.py  eclipse_build.py  jarjarclean.py  maven_helper.py  xml_rewrite.py  xml_rewrite_2.py  xml_rewrite_3.py
src/javatoolkit/xml/: SaxRewriter.py  sax.py
src/man/: findclass.1
src/maven/: Makefile  maven-getpominfos.py  maven-helper.py
src/maven/javatoolkit/: __init__.py
src/obsolete/bsfix/: JXSLT.java  Makefile  bsfix  bsfix-eclipse.py  bsfix.py  (+2 more)
src/py/: build-xml-rewrite  buildparser  class-version-verify.py  eclipse-build.py  findclass  jarjarclean  maven-helper.py  xml-rewrite-2.py  xml-rewrite-3.py  xml-rewrite.py
src/sun-fetch/: TODO  sun-fetch.py
src/test/: test_cvv.py
(+27 files in other folders)
